clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/borrow_struct_borrow_field/borrow_struct_borrow_field.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

typedef struct A {
    int * borrow p;
    int * borrow q;
    int c;
} A;

void useSA(A);

void test1(A a) {
    A b = a; // expected-note {{previous borrow is here}} expected-note {{previous borrow is here}}
    useSA(a); // expected-error {{There should be at most one mutable borrow targeting to 'a.p' at the same time}} expected-error {{There should be at most one mutable borrow targeting to 'a.q' at the same time}}
    useSA(b);
}

typedef struct B {
    A a;
    int d;
} B;

void useSB(B);

void test2(B b) {
    A m = b.a; // expected-note {{previous borrow is here}} expected-note {{previous borrow is here}}
    useSB(b); // expected-error {{There should be at most one mutable borrow targeting to 'b.a.p' at the same time}} expected-error {{There should be at most one mutable borrow targeting to 'b.a.q' at the same time}}
    useSA(m);
}

void test3(B b) {
    A m = b.a; // expected-note {{previous borrow is here}} expected-note {{previous borrow is here}}
    useSA(b.a); // expected-error {{There should be at most one mutable borrow targeting to 'b.a.p' at the same time}} expected-error {{There should be at most one mutable borrow targeting to 'b.a.q' at the same time}}
    useSA(m);
}